--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -1,8 +1,27 @@
 [package]
 name = "lib"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2021"
+authors = [ "addyourname@here.com" ]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1"
+thiserror = "1"
+
+[dev-dependencies]
+
+[lib]
+name = "lib"
+path = "src/lib.rs"
+test = true
+doctest = false
+bench = false
+doc = true
+plugin = false
+proc-macro = false
+harness = true
+edition = "2021"
+crate-type = ["rlib"]
+required-features = []
